2010-07-13  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	* flumotion/component/muxers/mpegts/mpegts.py:
	* flumotion/component/muxers/mpegts/mpegts.xml:
	Do segment per 1-keyframe at the muxer level to avoid reaching the
	limit of 500 TS buffers at the multifdsink level (network speed
	variability can hit this limit at the feeder level, and cause huge
	number of buffer drops, resulting in discontinuities and 404 and
	the streamer level)

2010-07-09  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Andoni Morales Alastruey

	* flumotion/component/consumers/applestreamer/resources.py:
	Do not use "chunked" HTTP for fragments data.
	This is a regression from iOS 4.0. See #10794.

2010-04-20  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Xavier Martinez

	* flumotion/component/muxers/mpegts/mpegts.py:
	Send a meaningful error when 'mpegtsmux' is not installed.

2010-03-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc-André Lureau

	* flumotion/component/consumers/applestreamer/hlsring.py:
	Append the request args also to the main playlist
	* flumotion/component/consumers/applestreamer/resources.py:
	Change log description: on a IP change the session is already
	in streamer.

2010-03-03  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	Return from the chain function right after detecting a discontinuity.

2010-03-02  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	Compute fragment duration based only on buffer timestamps, since
	buffer duration is almost never available, and titimestamp
	difference should be enough.

2010-03-02  Marc-André Lureau  <mlureau@flumotion.com>
