@@ -1,3 +1,12 @@
+2010-07-14  Marc-André Lureau  <mlureau@flumotion.com>
+
+	reviewed by: Julien Le Goff
+
+	* flumotion/component/consumers/applestreamer/applestreamer.py:
+	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
+	The new segment trick from the previous patch was not really a
+	good solution. Instead, sync=false on the applestreamer appsink.
+
 2010-07-13  Marc-André Lureau  <mlureau@flumotion.com>
 
 	reviewed by: Xavier Queralt
